# waif

./: .envrc  .gitignore  .npmrc  .tmp_create_impl_desc.md  @AGENTS.md  AGENTS.md  CHANGELOG.md  README.md  false  opencode.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.beads/: config.yaml  deletions.jsonl  interactions.jsonl  issues.jsonl  metadata.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.history_tmp/: ooda_snapshot_1768205459098.jsonl
.opencode/: agent_map.yaml  server.yaml
.perles/: config.yaml
.waif/: ooda-scheduler.yaml
completions/: _wf  wf.bash  wf.fish
config/: symbols.json  workflow_agents.yaml
docs/: CHANGELOG.md  Workflow.md  db_compaction.md  prd-agent_PRD.md  release_management.md  stage-labels.md
history/: bd-comment-wf-cvz.1.txt  bd-comment-wf-gn7.1.1-explain.txt  bd-comment-wf-gn7.1.1.txt  design-opencode-agent-integration-body.txt  github-copilot-pr.md  handoff_note_template.md  implementation-wf-r1d.2.md  legacy-ooda-inventory.md  ooda-config-examples.md  ooda_command_PRD.md  ooda_daily-health.jsonl  ooda_heuristics.md  ooda_probe_1766540000.txt  prd-context.md  review-wf-r1d.2.md  wf-ba2.2.2-body.txt  wf-ba2.5.2-notes.md  wf-d0y-E2E.md  wf-e6r-implementation-plan.md  wf-gn7.1-spike.md  wf-gn7.1.1-issue-update.md  wire-waif-prd-to-prd-agent-body.txt
schemas/: action.schema.json
scripts/: dev_opencode_emitter.js  emit-events.js  ooda_probe.sh  parse-workflow-config.js  start-agent  start-workflow-tmux.sh  wf-gn7.1-inject.js
src/: index.ts  types.ts
src/lib/: bd.ts  (+26 more)
(+162 files in other folders)
