[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-cli"
version = "0.0.1"
description = "CLI skeleton for prd-agent PM tooling"
authors = [{name = "beads-testing"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.3",
]

[project.scripts]
pm = "pm.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
